refactor(auth): 改进用户ID及租户ID上下文获取方式
- 统一替换所有 myLong.LongOrNull 为 myLong.longOrNull，提高命名规范一致性
- 新增 myLong.findUserId 和 myLong.findTenantId 方法简化用户ID和租户ID提取
- 增加 myLong.hasKey 用于判断上下文中是否包含用户ID的健壮性校验
- 修改多处服务中鉴权逻辑，增强用户身份信息获取的统一性和安全性
- 在商品、标签、SKU等实体类及相关持久层代码中添加租户ID字段，支持多租户数据隔离
- 优化商品搜索工具描述和使用说明，完善电商智能导购助手的推荐逻辑
- 调整部分接口和服务调用中对上下文用户ID的获取，提升代码可读性和维护性
- 增加对租户ID的传递与设置，确保业务数据的多租户支持
- 修复测试代码中的内容描述，保证测试场景准确性
- 更新json模板提示，增强商品推荐助手的角色和使用规范说明
- 统一ProductToolServiceImpl中注解描述，明确功能及返回行为