@@ -10,14 +10,14 @@ public class WebClientUtils {
     public static <T> ParameterizedTypeReference<T> typeRef() {
         return new ParameterizedTypeReference<T>() {};
     }
-    public static Long Long(Object number) {
-        Long Long = null;;
+    public static Long webLong(Object number) {
+        Long longNum = null;;
         try {
-            Long = new Long(number.toString().trim());
+            longNum = Long.valueOf(number.toString().trim());
         } catch (Exception e) {
             throw new RuntimeException("转换Long异常", e);
         }
-        return Long;
+        return longNum;
     }
     public static <T> TypeReference<T> typeRefFastJson2() {
         return new TypeReference<>() {};
